k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasktracker-app-service
  labels:
    app: tasktracker-app
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: tasktracker-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
