k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: postgres-db
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
